nginx-server-modules/sg.tf

resource "aws_security_group" "nginx-sg" {
  name        = "${var.server_name}-sg"
  description = "Security group for Nginx server"

  ingress {
    description = "SSH access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  tags = {
    Name = "nginx-instance"
    Environment = var.environment
    Owner = var.owner
    Team = var.Team
    Project = var.Project
  }
}
